added display service

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -108,6 +108,15 @@
     },
     "default-backend": "local"
   },
+  "Displays": {
+    "backends": {
+      "local": {
+        "type": "opencv",
+        "active": true
+      }
+    },
+    "default-backend": "local"
+  },
   "ConfigurationSkill": {
     "max_delay": 600
   },
