--- a/mycroft/configuration/jarbas.conf
+++ b/mycroft/configuration/jarbas.conf
@@ -32,7 +32,7 @@
         "ssl": false
         //"cert_file" : "~/JarbasAI/mycroft/client/webchat/certs/certificate.crt",
         //"key_file" : "~/JarbasAI/mycroft/client/webchat/certs/certificate.key",
-  },
+        },
 
   // Jarbas Server Settings
   "jarbas_server": {
@@ -102,7 +102,7 @@
                               "FbChatPersonIntent",
                               "FbLikePhotosofPersonIntent"
                               ]
-  },
+        },
   // Jarbas Client Settings
   "jarbas_client": {
          // connect to server in this port
@@ -117,7 +117,7 @@
          // block / accept this message types from server
          "message_policy" : "blacklist",
          "message_list" : []
-  },
+        },
 
   // where to save stuff, like dreams and poems
   "database_path" : "/home/user/jarbas_stable/JarbasAI/database",
@@ -145,7 +145,7 @@
     "CloudsightSecret": "",
     "RedditSecret": ""
 
-  },
+    },
 
   // Measurement units, either 'metric' or 'english'
   // Override: REMOTE
@@ -157,9 +157,10 @@
 
   // Date format, either 'MDY' (e.g. "11-29-1978") or 'DMY' (e.g. "29-11-1978")
   // Override: REMOTE
-  "date_format": "MDY",
+  "date_format": "DMY",
 
   // Play a beep when system begins to listen?
+  // NOTE: Hot words have their own listen param
   // Override: none
   "confirm_listening": true,
 
@@ -168,7 +169,7 @@
   "sounds": {
     "start_listening": "snd/start_listening.wav",
     "end_listening": "snd/end_listening.wav"
-  },
+    },
 
   // Mechanism used to play WAV audio files
   // Override: SYSTEM
@@ -274,9 +275,8 @@
   },
 
   // hot word configurations
-  "hot_words":{
-        "self destruct":
-             {
+  "hot_words": {
+        "self destruct": {
                 // this could be pocketsphinx instead
                 "module":"snowboy",
                 // if this field is omitted = True
@@ -295,10 +295,9 @@
                     "models": {
                             "self destruct": "self_destruct.pmdl"
                         }
-                }
-            },
-        "thank you":
-             {
+                     }
+                },
+        "thank you": {
                 // this could be pocketsphinx instead
                 "module":"snowboy",
                 // treat this like a full utterance
@@ -313,10 +312,9 @@
                     "models": {
                             "thank you": "thank you.pmdl"
                         }
-                }
-            },
-        "mycroft":
-         {
+                     }
+                },
+        "mycroft": {
             "module":"snowboy",
             // play this sound on this hot word
             "sound": "snd/dong.wav",
@@ -329,10 +327,9 @@
                 "models": {
                         "mycroft": "Hey Mycroft.pmdl"
                     }
-            }
-        },
-         "computer":
-         {
+                }
+             },
+         "computer": {
             "module":"snowboy",
             // play this sound on this hot word
             "sound": "snd/ding.wav",
@@ -346,26 +343,28 @@
                 "models": {
                         "computer": "Hey_Computer.pmdl"
                     }
+                }
             }
-        }
       },
   // Settings used by the wake-up-word listener
   // Override: REMOTE
   "listener": {
-    / listener settings
+    // listener settings
     "sample_rate": 16000,
     "channels": 1,
     "phoneme_duration": 120,
     "multiplier": 1.0,
     "energy_ratio": 1.5,
     // record wake words or not
-    "record_wake_words": true
+    "record_wake_words": true,
+    // record hot words or not
+    "record_hot_words": true,
     // record sentences or not
-    'record_utterances': false,
+    "record_utterances": false,
     // omit these fields for saving in /tmp
     //'wake_word_save_path': "path/for/wuw_recordings/wav",
     //'utterance_save_path': "path/for/utterance_recordings/wav",
-
+    //'hotword_save_path': "path/for/hotword_recordings/wav",
     "wake_word": "hey jarbas",
     "standup_word": "wake up",
 
@@ -375,8 +374,8 @@
         "sensitivity": 0.42,
         "models": {
             "jarbas": "hey jarbas.pmdl"
-        }
-    },
+            }
+        },
 
     // wake up word module
     "standup_config": {
@@ -384,8 +383,8 @@
         "wake_up_sensitivity": 0.41,
         "wake_up_models": {
             "wake up": "Wakeup.pmdl"
+            }
         }
-    }
 
     // pocketsphinx example configs
     // wake word module
