Add default configuration

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -229,6 +229,14 @@
     "channels": 1
   },
   "SkillInstallerSkill": {
-
+  },
+  "Audio": {
+    "backends": {
+      "local": {
+        "type": "mpg123",
+        "active": true,
+        "default": true
+      }
+    }
   }
 }
