added placeholders for jarbas skills

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -41,7 +41,7 @@
   "server": {
     "url": "https://api.mycroft.ai",
     "version": "v1",
-    "update": true,
+    "update": false,
     "metrics": false
   },
   "websocket": {
@@ -53,8 +53,8 @@
   "listener": {
     "sample_rate": 16000,
     "channels": 1,
-    "wake_word": "hey mycroft",
-    "phonemes": "HH EY . M AY K R AO F T",
+    "wake_word": "Jarbas",
+    "phonemes": " JH AA R  B AE SH ",
     "threshold": 1e-90,
     "multiplier": 1.0,
     "energy_ratio": 1.5
@@ -86,20 +86,20 @@
     "setup": false
   },
   "ConfigurationSkill": {
-    "max_delay": 60
+    "max_delay": 600
   },
   "WikipediaSkill": {
     "max_results": 5,
     "max_phrases": 2
   },
   "WolframAlphaSkill": {
-    "api_key": "",
-    "proxy": true
+    "api_key": "3xxxxL3",
+    "proxy": false
   },
   "WeatherSkill": {
-    "api_key": "",
-    "proxy": true,
-    "temperature": "fahrenheit"
+    "api_key": "dxxxxx",
+    "proxy": false,
+    "temperature": "celsius"
   },
   "NPRNewsSkill": {
     "url_rss": "http://www.npr.org/rss/podcast.php?id=500005"
@@ -127,5 +127,81 @@
     "notify_delay": 5,
     "rate": 16000,
     "channels": 1
-  }
+  },
+  "FacebookSkill": {
+    "graph_api_key": "ExxxfbLxx",
+	"mail": "sxxxxxom",
+	"passwd": "axxixxxxxxx",
+	"wapi_key": "xxxxxxb",
+	"proxy": true,
+	"default": "graph",
+	"friendnum": 2,
+	"mashapekey": "RMVxxxxxqp",
+	"cloudsightapi" : "I5xxxxxAQ",
+	"cloudsightsecret" : "DxxxxxQ",
+	"redditid" : "Fxxxxxxxnqmww",
+	"redditsecret" : "xxxx"
+  },
+  "MusicSkill": {
+    "save": "/home/user/mycroft-core/mycroft/skills/musicskill/mp3"
+  },
+  "PoetrySkill": {
+    "path": "/home/user/mycroft-core/mycroft/skills/Poetry"
+  },
+  "EventSkill": {
+    "status update": {
+        "actions": [{"TimeIntent": {}},
+                    {"NextHoursWeatherIntent": {}},
+                    {"BitcoinIntent": {}}
+        ]
+    },
+    "wakeup": {
+        "actions": [
+          {"SpeakIntent": {"Words": "Good morning Sunshine"}},
+          {"TimeIntent": {}},
+          {"CurrentWeatherIntent": {}},
+          {"NextDayWeatherIntent": {}},
+          {"BitcoinIntent": {}},
+          {"NPRNewsIntent": {}}
+      ],
+      "time": "06:45"
+    }
+  },
+  "CmdSkill": {
+      "alias": {
+        "generate report": "/home/user/scripts/generate_report.sh"
+      }
+  },
+  "QuotesSkill": {
+    "mashape_key": "key",
+	"gender": "male",
+	"birthdate": "11 May 1999"
+  },
+  "PhotoSkill": {
+    "wikimapia_key": "keyp"
+  },
+  "PictureSkill": {
+    "cloudsight_key": "Ikey",
+	"secret": "key_TUvG9Q"
+  },
+  "WallpaperSkill": {
+    "reddit_id": "Fkeyw",
+	"secret": "keyk"
+  },
+  "DreamSkill": {
+    "model": "bvlc_googlenet",
+	"caffe_path": "/home/user/caffe/python",
+	"model_path": "/home/user/mycroft-core/mycroft/skills/dreamskill/caffe/models"
+  },
+  "LeaksSkill": {
+    "mail": "lmail@gmail.com",
+	"smtp": "smtp.gmail.com",
+	"passwd": "apasswd",
+	"port": "587".
+	"btc": "1BwNBVnRvA88ibEjpoYsjHrHF4WABPKi45",
+	"dump_path": "/home/user/mycroft-core/mycroft/dumpmon/dumps/"
+  },
+  "DailyMeditationSkill":{
+       "url_rss":"http://www.themeditationpodcast.com/tmp.xml"
+      }
 }
