--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -197,7 +197,7 @@
     "mail": "lmail@gmail.com",
 	"smtp": "smtp.gmail.com",
 	"passwd": "apasswd",
-	"port": "587".
+	"port": "587",
 	"btc": "1BwNBVnRvA88ibEjpoYsjHrHF4WABPKi45",
 	"dump_path": "/home/user/mycroft-core/mycroft/dumpmon/dumps/"
   },
