load mshape from config in sentiment

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -203,5 +203,8 @@
   },
   "DailyMeditationSkill":{
        "url_rss":"http://www.themeditationpodcast.com/tmp.xml"
+      },
+  "Sentiment":{
+       "mashape":"key"
       }
 }
