load credentials from config file

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -206,5 +206,11 @@
       },
   "Sentiment":{
        "mashape":"key"
+      },
+  "fbchat":{
+       "mail": "lefacebookmail@gmail.com",
+       "passwd": "pass",
+       "code": "JARBAS",
+       "id": "myfacebookid"
       }
 }
