added iter number to config file

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -190,6 +190,7 @@
   },
   "DreamSkill": {
     "model": "bvlc_googlenet",
+    "iter": "25",
 	"caffe_path": "/home/user/caffe/python",
 	"model_path": "/home/user/jarbas-core/mycroft/skills/dreamskill/caffe/models"
   },
