--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -191,6 +191,7 @@
   "DreamSkill": {
     "model": "bvlc_googlenet",
     "iter": "25",
+    "mode": "3",
 	"caffe_path": "/home/user/caffe/python",
 	"model_path": "/home/user/jarbas-core/mycroft/skills/dreamskill/caffe/models"
   },
