refactored sentiment into skill

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -206,7 +206,7 @@
   "DailyMeditationSkill":{
        "url_rss":"http://www.themeditationpodcast.com/tmp.xml"
       },
-  "Sentiment":{
+  "SentimentSkill":{
        "mashape":"key"
       },
   "fbchat":{
