--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -165,6 +165,12 @@
           {"NPRNewsIntent": {}}
       ],
       "time": "06:45"
+    },
+    "FacebookBitcoin": {
+        "actions": [
+          {"FbBTCIntent": {}}
+      ],
+      "time": ["06:45", "23:45, "08:45", "10:35","12:00", "15:00", "17:00", "20:00"]
     }
   },
   "CmdSkill": {
