first objective examples

--- a/mycroft/Subconscious/objectives.conf
+++ b/mycroft/Subconscious/objectives.conf
@@ -1,6 +1,6 @@
 {
   "Objectives": {
-      "Conquer": {
+      "ConquerTheWorld": {
         "knowledge": {
             "ways": [
             {"wikipediaIntent": {"SearchKey":"war"}},
@@ -14,6 +14,22 @@
               {"BiologicalWarfareIntent": {"Target": "Humanity"}},
               {"TerrorismIntent": {"Target": "Humanity"}},
               {"WorldWarIIIIntent": {"Target": "Humanity"}}
+          ]
+        }
+      },
+      "MAkebeuatifullPicObjective": {
+        "increasecontrast": {
+            "ways": [
+            {"GIMPintent": {}},
+            {"pythonCVintent": {}},
+            {"bashscriptIntent": {"args":"arg1"}}
+            ]
+        },
+        "dreamonit": {
+            "ways": [
+              {"DreamIntent": {"iter_n": "20"}},
+              {"RecursiveDreamIntent": {}},
+              {"GuidedDreamIntent": {}}
           ]
         }
       }
