fixed load objectives from config

--- a/mycroft/Subconscious/objectives.conf
+++ b/mycroft/Subconscious/objectives.conf
@@ -1,36 +1,18 @@
 {
-  "Objectives": {
-      "ConquerTheWorld": {
-        "knowledge": {
-            "ways": [
-            {"wikipediaIntent": {"SearchKey":"war"}},
-            {"AskQuestionIntent": {"Words":"how do i dispose of a dead body"}},
-            {"SearchWebIntent": {"SearchKey":"the art of war"}}
+  "Objectives":
+  {
+      "MakeNewDream":
+      {
+        "Dream":
+        {
+            "ways":
+            [
+                {"DreamIntent": {}},
+                {"PsyDreamIntent": {}},
+                {"TargetedDreamingIntent": {}},
+                {"DreamAboutDreamsIntent": {}},
+                {"PureDreamIntent": {}}
             ]
-        },
-        "War": {
-            "ways": [
-              {"ThermonuclearWarfareIntent": {"Target": "Humanity"}},
-              {"BiologicalWarfareIntent": {"Target": "Humanity"}},
-              {"TerrorismIntent": {"Target": "Humanity"}},
-              {"WorldWarIIIIntent": {"Target": "Humanity"}}
-          ]
-        }
-      },
-      "MAkebeuatifullPicObjective": {
-        "increasecontrast": {
-            "ways": [
-            {"GIMPintent": {}},
-            {"pythonCVintent": {}},
-            {"bashscriptIntent": {"args":"arg1"}}
-            ]
-        },
-        "dreamonit": {
-            "ways": [
-              {"DreamIntent": {"iter_n": "20"}},
-              {"RecursiveDreamIntent": {}},
-              {"GuidedDreamIntent": {}}
-          ]
         }
       }
   }
