added knowldege objective

--- a/mycroft/Subconscious/objectives.conf
+++ b/mycroft/Subconscious/objectives.conf
@@ -1,17 +1,23 @@
 {
-  "Objectives":
-  {
-      "MakeNewDream":
-      {
-        "Dream":
-        {
-            "ways":
-            [
-                {"DreamIntent": {}},
-                {"PsyDreamIntent": {}},
-                {"TargetedDreamingIntent": {}},
-                {"DreamAboutDreamsIntent": {}},
-                {"PureDreamIntent": {}}
+  "Objectives": {
+      "MakeNewDream":{
+        "Dream":{
+            "ways":[
+            {"DreamIntent": {}},
+            {"PsyDreamIntent": {}},
+            {"TargetedDreamingIntent": {}},
+            {"DreamAboutDreamsIntent": {}},
+            {"PureDreamIntent": {}}
+            ]
+        }
+      },
+      "Troll":{
+        "VideoTroll":{
+            "ways":[
+            {"SearchWebsiteIntent": {"Website":"Youtube","SearchTerms":"Trololo Video"}},
+            {"SearchWebsiteIntent": {"Website":"Youtube","SearchTerms":"arnold schwarzenegger quotes"}},
+            {"SearchWebsiteIntent": {"Website":"Youtube","SearchTerms":"narwhals 10 hour"}},
+            {"SearchWebsiteIntent": {"Website":"Youtube","SearchTerms":"amazing horse 10 hour"}}
             ]
         }
       }
