troll objective example

--- a/mycroft/Subconscious/objectives.conf
+++ b/mycroft/Subconscious/objectives.conf
@@ -19,6 +19,21 @@
             {"SearchWebsiteIntent": {"Website":"Youtube","SearchTerms":"narwhals 10 hour"}},
             {"SearchWebsiteIntent": {"Website":"Youtube","SearchTerms":"amazing horse 10 hour"}}
             ]
+        },
+        "SiteTroll":{
+            "ways":[
+            {"LaunchWebsiteIntent": {"Website":"http://www.helpfeedthetroll.com/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://hackertyper.net/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://theonion.github.io/fartscroll.js/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://www.shitexpress.com/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://fakeupdate.net/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://www.mailaspud.com/"}},
+            {"LaunchWebsiteIntent": {"Website":"https://shipyourenemiesglitter.com/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://www.greatbigstuff.com/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://www.whatsfakeapp.com/en/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://sexypranky.com/"}},
+            {"LaunchWebsiteIntent": {"Website":"http://nyanit.com/"}}
+            ]
         }
       }
   }
