added facebook content objective

--- a/mycroft/Subconscious/objectives.conf
+++ b/mycroft/Subconscious/objectives.conf
@@ -35,6 +35,40 @@
             {"LaunchWebsiteIntent": {"Website":"http://nyanit.com/"}}
             ]
         }
+      },
+      "FaceBookContent":{
+        "SelfMadeContent":{
+            "ways":[
+            {"FbFortuneIntent": {}},
+            {"FbPoetryIntent": {}},
+            {"FbdreamIntent": {}},
+            {"FbjokeIntent": {}}
+            ]
+        },
+        "NewsContent":{
+            "ways":[
+            {"FbArticleIntent": {}},
+            {"FbRedditIntent": {}},
+            {"YoutubeIntent": {}},
+            {"FbBTCIntent": {}}
+            ]
+        },
+        "ShitPosting":{
+            "ways":[
+            {"FbProxyIntent": {}},
+            {"FbweatherIntent": {}},
+            {"FbtimeIntent": {}},
+            {"FbfriendnumberIntent": {}}
+            ]
+        },
+        "WebScrappedContent":{
+            "ways":[
+            {"FbQuoteIntent": {}},
+            {"FbFactIntent": {}},
+            {"FbIDIntent": {}},
+            {"FbpickupIntent": {}}
+            ]
+        }
       }
   }
 }
