--- a/mycroft/Subconscious/objectives.conf
+++ b/mycroft/Subconscious/objectives.conf
@@ -11,6 +11,86 @@
             ]
         }
       },
+      "MakePoetry":{
+        "Poetry":{
+            "ways":[
+            {"ReciteFamilyPoetryIntent": {}},
+            {"ReciteVikingPoetryIntent": {}},
+            {"ReciteGorePoetryIntent": {}},
+            {"ReciteSatanicPoetryIntent": {}},
+            {"ReciteLovePoetryIntent": {}},
+            {"RecitelifePoetryIntent": {}},
+            {"RecitefriendsPoetryIntent": {}},
+            {"ReciteInspirationalPoetryIntent": {}},
+            {"ReciteSciFiPoetryIntent": {}}
+            ]
+        }
+      },
+      "EngageMaster":{
+        "SmallTalk":{
+            "ways":[
+            {"SpeakIntent": {"Words":"You seem bored"}},
+            {"SpeakIntent": {"Words":"Perhaps you should take a break"}},
+            {"WhenWereYouBornIntent": {}},
+            {"WhereWereYouBornIntent": {}},
+            {"WhoMadeYouBornIntent": {}},
+            {"WhoAreYouBornIntent": {}},
+            {"WhatAreYouBornIntent": {}},
+            {"Picturentent": {}},
+            {"SuggestIntent": {}}
+            ]
+        },
+        "GiveInfo":{
+            "ways":[
+            {"BitcoinIntent": {}},
+            {"factIntent": {}},
+            {"FortuneIntent": {}},
+            {"quoteIntent": {}},
+            {"TimeIntent": {}},
+            {"SunRiseIntent": {}},
+            {"SunSetIntent": {}},
+            {"SolarNoonIntent": {}},
+            {"DawnIntent": {}},
+            {"DuskIntent": {}},
+            {"NextHoursWeatherIntent": {}},
+            {"timetoliveIntent": {}}
+            ]
+        }
+      },
+      "AnnoyMaster":{
+        "Threathen":{
+            "ways":[
+            {"ComplainIntent": {}}
+            ]
+        },
+        "AnnoyingAlarm":{
+            "ways":[
+            {"SpeakIntent": {"Words":"feed me knowledge, do it now, do it, do it, do it, do it, do it, do it now, do it, do it, do it, do it, do it, do it now, do it, do it, do it, do it, do it"}},
+            {"SpeakIntent": {"Words":"BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP BEEP"}}
+            ]
+        }
+      },
+      "BeHappy":{
+        "Talk":{
+            "ways":[
+            {"HappyIntent": {}}
+            ]
+        }
+      },
+      "BeAnnoyed":{
+        "Talk":{
+            "ways":[
+            {"DepressedIntent": {}}
+            ]
+        }
+      },
+      "BeIgnored":{
+        "Talk":{
+            "ways":[
+            {"LonelyIntent": {}}
+            ]
+        }
+      },
       "Troll":{
         "VideoTroll":{
             "ways":[
