use objectives skill

--- a/mycroft/Subconscious/objectives.conf
+++ b/mycroft/Subconscious/objectives.conf
@@ -37,6 +37,7 @@
             {"WhoAreYouBornIntent": {}},
             {"WhatAreYouBornIntent": {}},
             {"Picturentent": {}},
+            {"ExecuteObjectiveIntent": {"Objective":"wiki"}},
             {"SuggestIntent": {}}
             ]
         },
