added dream and fb objectives

--- a/mycroft/skills/objective_skill/objectives.conf
+++ b/mycroft/skills/objective_skill/objectives.conf
@@ -1,5 +1,50 @@
 {
   "Objectives": {
+      "MakeNewDream":{
+        "Dream":{
+            "ways":[
+            {"DreamIntent": {}},
+            {"PsyDreamIntent": {}},
+            {"TargetedDreamingIntent": {}},
+            {"DreamAboutDreamsIntent": {}},
+            {"PureDreamIntent": {}}
+            ]
+        }
+      },
+      "FaceBookContent":{
+        "SelfMadeContent":{
+            "ways":[
+            {"FbFortuneIntent": {}},
+            {"FbPoetryIntent": {}},
+            {"FbdreamIntent": {}},
+            {"FbjokeIntent": {}}
+            ]
+        },
+        "NewsContent":{
+            "ways":[
+            {"FbArticleIntent": {}},
+            {"FbRedditIntent": {}},
+            {"YoutubeIntent": {}},
+            {"FbBTCIntent": {}}
+            ]
+        },
+        "ShitPosting":{
+            "ways":[
+            {"FbProxyIntent": {}},
+            {"FbweatherIntent": {}},
+            {"FbtimeIntent": {}},
+            {"FbfriendnumberIntent": {}}
+            ]
+        },
+        "WebScrappedContent":{
+            "ways":[
+            {"FbQuoteIntent": {}},
+            {"FbFactIntent": {}},
+            {"FbIDIntent": {}},
+            {"FbpickupIntent": {}}
+            ]
+        }
+      },
       "MakePoetry":{
         "Poetry":{
             "ways":[
