added populate music databse intents

--- a/mycroft/skills/objective_skill/objectives.conf
+++ b/mycroft/skills/objective_skill/objectives.conf
@@ -60,11 +60,20 @@
             ]
         }
       },
+      "MusicDatabase":{
+        "YoutubeDl":{
+            "ways":[
+            {"DownloadMetalIntent": {}},
+            {"DownloadMusicIntent": {}}
+            ]
+        }
+      },
       "EngageMaster":{
         "SmallTalk":{
             "ways":[
             {"SpeakIntent": {"Words":"You seem bored"}},
             {"SpeakIntent": {"Words":"Perhaps you should take a break"}},
+            {"SuggestMetalIntent": {}},
             {"WhenWereYouBornIntent": {}},
             {"WhereWereYouBornIntent": {}},
             {"WhoMadeYouBornIntent": {}},
