changed all APIs to a single config section, added APIconfig to all skills

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -34,6 +34,17 @@
       "offset": -21600000
     }
   },
+  "APIS": {
+    "WolframAlphaAPI": "key",
+    "WeatherAPI": "key",
+    "GraphAPI": "key",
+    "MashapeAPI": "key",
+    "WikimapiaAPI": "key",
+    "CloudsightAPI": "key",
+    "RedditAPI": "key",
+    "CloudsightSecret": "secret",
+    "RedditSecret": "secret"
+  },
   "skills": {
     "directory": "~/.mycroft/skills",
     "stop_threshold": 2.0
@@ -93,11 +104,9 @@
     "max_phrases": 2
   },
   "WolframAlphaSkill": {
-    "api_key": "3xxxxL3",
     "proxy": false
   },
   "WeatherSkill": {
-    "api_key": "dxxxxx",
     "proxy": false,
     "temperature": "celsius"
   },
@@ -129,18 +138,11 @@
     "channels": 1
   },
   "FacebookSkill": {
-    "graph_api_key": "ExxxfbLxx",
 	"mail": "sxxxxxom",
 	"passwd": "axxixxxxxxx",
-	"wapi_key": "xxxxxxb",
 	"proxy": true,
 	"default": "graph",
-	"friendnum": 2,
-	"mashapekey": "RMVxxxxxqp",
-	"cloudsightapi" : "I5xxxxxAQ",
-	"cloudsightsecret" : "DxxxxxQ",
-	"redditid" : "Fxxxxxxxnqmww",
-	"redditsecret" : "xxxx"
+	"friendnum": 2
   },
   "MusicSkill": {
     "save": "/home/user/jarbas-core/mycroft/skills/musicskill/mp3"
@@ -173,20 +175,8 @@
       }
   },
   "QuotesSkill": {
-    "mashape_key": "key",
 	"gender": "male",
 	"birthdate": "11 May 1999"
-  },
-  "PhotoSkill": {
-    "wikimapia_key": "keyp"
-  },
-  "PictureSkill": {
-    "cloudsight_key": "Ikey",
-	"secret": "key_TUvG9Q"
-  },
-  "WallpaperSkill": {
-    "reddit_id": "Fkeyw",
-	"secret": "keyk"
   },
   "DreamSkill": {
     "model": "bvlc_googlenet",
@@ -205,9 +195,6 @@
   },
   "DailyMeditationSkill":{
        "url_rss":"http://www.themeditationpodcast.com/tmp.xml"
-      },
-  "SentimentSkill":{
-       "mashape":"key"
       },
   "fbchat":{
        "mail": "lefacebookmail@gmail.com",
