--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -35,15 +35,15 @@
     }
   },
   "APIS": {
-    "WolframAlphaAPI": "key",
-    "WeatherAPI": "key",
-    "GraphAPI": "key",
-    "MashapeAPI": "key",
-    "WikimapiaAPI": "key",
-    "CloudsightAPI": "key",
-    "RedditAPI": "key",
-    "CloudsightSecret": "secret",
-    "RedditSecret": "secret"
+    "WolframAlphaAPI": "",
+    "WeatherAPI": "",
+    "GraphAPI": "",
+    "MashapeAPI": "",
+    "WikimapiaAPI": "",
+    "CloudsightAPI": "",
+    "RedditAPI": "",
+    "CloudsightSecret": "",
+    "RedditSecret": ""
   },
   "skills": {
     "directory": "~/.mycroft/skills",
