--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -1,5 +1,6 @@
 {
   "lang": "en-us",
+  "database_path": "/home/user/jarbas-core/mycroft/database",
   "system_unit": "metric",
   "time_format": "half",
   "date_format": "MDY",
