--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -39,6 +39,8 @@
     "WolframAlphaAPI": "",
     "WeatherAPI": "",
     "GraphAPI": "",
+    "NASAAPI": "DEMO_KEY",
+    "GoogleTrafficAPI", "",
     "MashapeAPI": "",
     "WikimapiaAPI": "",
     "CloudsightAPI": "",
