--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -40,7 +40,7 @@
     "WeatherAPI": "",
     "GraphAPI": "",
     "NASAAPI": "DEMO_KEY",
-    "GoogleTrafficAPI", "",
+    "GoogleTrafficAPI": "",
     "MashapeAPI": "",
     "WikimapiaAPI": "",
     "CloudsightAPI": "",
