--- a/mycroft/skills/objectives/objectives.conf
+++ b/mycroft/skills/objectives/objectives.conf
@@ -100,7 +100,7 @@
             ]
         }
       },
-      "annoy master":{
+      "be depressed":{
         "Threathen":{
             "ways":[
             {"ComplainIntent": {}}
@@ -127,7 +127,7 @@
             ]
         }
       },
-      "be ignored":{
+      "be lonely":{
         "Talk":{
             "ways":[
             {"LonelyIntent": {}}
