added audio service

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -99,6 +99,15 @@
   "wifi": {
     "setup": false
   },
+  "Audio": {
+    "backends": {
+      "local": {
+        "type": "mpg123",
+        "active": true
+      }
+    },
+    "default-backend": "local"
+  },
   "ConfigurationSkill": {
     "max_delay": 600
   },
@@ -114,7 +123,7 @@
     "proxy": false
   },
   "WeatherSkill": {
-    "proxy": false,
+    "proxy": true,
     "temperature": "celsius"
   },
   "NPRNewsSkill": {
@@ -183,7 +192,7 @@
   },
   "QuotesSkill": {
 	"gender": "male",
-	"birthdate": "11 May 1999"
+	"birthdate": "13 May 1992"
   },
   "DreamSkill": {
     "model": "bvlc_googlenet",
@@ -209,4 +218,4 @@
        "code": "JARBAS",
        "id": "myfacebookid"
       }
-}
+   }
