added displays to config

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -34,6 +34,23 @@
       "offset": -21600000
     }
   },
+  "Displays": {
+    "backends": {
+      "local": {
+        "type": "opencv",
+        "active": true
+      },
+      "gtk": {
+        "type": "pygtk",
+        "active": true
+      },
+      "opencv": {
+        "type": "opencv",
+        "active": true
+      }
+    },
+    "default-backend": "local"
+  },
   "skills": {
     "directory": "~/.mycroft/skills",
     "stop_threshold": 2.0
