--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -111,6 +111,14 @@
   "Displays": {
     "backends": {
       "local": {
+        "type": "pygtk",
+        "active": true
+      },
+      "gtk": {
+        "type": "pygtk",
+        "active": true
+      },
+      "opencv": {
         "type": "opencv",
         "active": true
       }
@@ -168,12 +176,6 @@
 	"proxy": false,
 	"default": "graph",
 	"friendnum": 2
-  },
-  "MusicSkill": {
-    "save": "/home/user/jarbas-core/mycroft/skills/musicskill/mp3"
-  },
-  "PoetrySkill": {
-    "path": "/home/user/jarbas-core/mycroft/skills/Poetry"
   },
   "EventSkill": {
     "status update": {
