--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -111,7 +111,7 @@
   "Displays": {
     "backends": {
       "local": {
-        "type": "pygtk",
+        "type": "opencv",
         "active": true
       },
       "gtk": {
