--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -194,6 +194,12 @@
           {"NPRNewsIntent": {}}
       ],
       "time": "06:45"
+    },
+    "populate database": {
+        "actions": [
+          {"Execute_Objective": {"Objective": "adquire knowledge"}}
+      ],
+      "time": ["05:00" , "07:00", "09:00", "10:00", "13:00", "15:00", "17:00", "20:00", "22:00"]
     }
   },
   "CmdSkill": {
