--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -67,6 +67,7 @@
   "listener": {
     "sample_rate": 16000,
     "channels": 1,
+    "record_wake_words": false,
     "wake_word": "Jarbas",
     "phonemes": " JH AA R  B AE SH ",
     "threshold": 1e-90,
