--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -40,17 +40,18 @@
     "end_listening": "snd/end_listening.wav"
   },
   "APIS": {
-    "WolframAlphaAPI": "",
-    "WeatherAPI": "",
-    "GraphAPI": "",
+    "WolframAlphaAPI": "key",
+    "WeatherAPI": "key",
+    "GraphAPI": "key",
     "NASAAPI": "DEMO_KEY",
-    "GoogleTrafficAPI": "",
-    "MashapeAPI": "",
-    "WikimapiaAPI": "",
-    "CloudsightAPI": "",
-    "RedditAPI": "",
-    "CloudsightSecret": "",
-    "RedditSecret": ""
+    "GoogleTrafficAPI": "key",
+    "MashapeAPI": "key",
+    "WikimapiaAPI": "key",
+    "CloudsightAPI": "key",
+    "RedditAPI": "key",
+    "CloudsightSecret": "key",
+    "RedditSecret": "key",
+    "Wordnik":"key"
   },
 
   // Mechanism used to play WAV audio files
@@ -325,6 +326,41 @@
     "notify_delay": 5,
     "rate": 16000,
     "channels": 1
+  },
+  "TrafficSkill": {
+    "pois": {
+    "default": {
+      "destinations": {
+        "work": "1 Main Street, Beverly Hills, CA 90210"
+      },
+      "origins": {
+        "home": "350 5th Ave, New York, NY 10118"
+      }
+    }
+  }
+  },
+   "EventSkill": {
+    "status update": {
+        "actions": [{"TimeIntent": {}},
+                    {"BitcoinLastIntent": {}},
+                    {"CurrentWeatherIntent": {}}
+        ]
+    },
+    "wakeup": {
+        "actions": [
+          {"SpeakIntent": {"Words": "Good morning Sunshine"}},
+          {"TimeIntent": {}},
+          {"CurrentWeatherIntent": {}},
+          {"NextDayWeatherIntent": {}},
+          {"NPRNewsIntent": {}}
+      ],
+      "time": "06:45"
+    }
+  },
+   "CmdSkill": {
+      "alias": {
+        "generate report": "/home/user/scripts/generate_report.sh"
+      }
   },
   "SkillInstallerSkill": {
 
