event and cmd skill

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -99,9 +99,9 @@
     // TODO: Old unused kludge, remove from code
     "stop_threshold": 2.0,
      // priority skills to be loaded first
-    "blacklisted_skills": ["template_skill", "service_context", "mycroft_media", "skill-ip", "skill-audio-record", "service_sound_analisys"],
+    "blacklisted_skills": ["template_skill", "service_context", "skill-ip", "skill-audio-record", "service_sound_analisys"],
     // priority skills to be loaded first
-    "priority_skills": ["service_intent_layer", "service_vision", "service_objectives", "service_display", "service_audio", "service_freewill", "service_sentiment_analisys", "LILACS_core", "LILACS_knowledge", "LILACS_storage", "LILACS_teach", "LILACS_curiosity", "LILACS_chatbot"]
+    "priority_skills": ["service_vision", "service_objectives", "service_display", "service_audio", "LILACS_core", "LILACS_knowledge", "LILACS_storage"]
   },
 
   // Address of the REMOTE server
