event and cmd skill

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -98,10 +98,76 @@
     "directory": "~/.mycroft/skills",
     // TODO: Old unused kludge, remove from code
     "stop_threshold": 2.0,
-     // priority skills to be loaded first
-    "blacklisted_skills": ["template_skill", "service_context", "skill-ip", "skill-audio-record", "service_sound_analisys"],
+     // blacklisted skills to not load
+    "blacklisted_skills": ["template_skill", "service_context", "service_sound_analisys"],
     // priority skills to be loaded first
-    "priority_skills": ["service_vision", "service_objectives", "service_display", "service_audio", "LILACS_core", "LILACS_knowledge", "LILACS_storage"]
+    "priority_skills": ["skill_control_center","service_vision", "service_objectives", "service_display", "service_audio", "LILACS_core", "LILACS_knowledge", "LILACS_storage"],
+    "run_levels": {
+        // core skills only
+        "0":{
+            "type":"whitelist",
+            "skills": []
+        },
+        "core":{
+            "type":"whitelist",
+            "skills":["skill_alarm", "skill_configuration", "skill_date_time", "skill_desktop_launcher", "skill_hello_world",
+            "skill_joke", "skill_naptime", "skill_npr_news", "skill_pairing", "skill_personal", "skill_reminder",
+            "skill_speak", "skill_spelling", "skill_stock", "skill_stop", "skill_volume", "skill_weather", "skill_wiki",
+            "skill-ip", "skill-pairing", "skill-wolfram-alpha"]
+        },
+        // all skills that can run offline only
+        "offline":{
+            "type":"blacklist",
+            "skills":["objective_facebook_content", "objective_troll", "objective_wikipedia",
+                    "skill_bitcoin_enhanced", "skill_articles", "skill_apod", "skill_cbc_news", "skill_daily_meditation",
+                    "skill_dumpmon", "skill_earth_polychromatic_imaging_camera", "skill_proxy", "skill_quotes",
+                    "skill_euromillions", "skill_facebook", "skill_facebook_posts", "skill_fox_news", "skill_metal_recomend",
+                    "skill_music", "skill_near_earth_object_tracker", "skill_solar_times", "skill_sun_spots", "skill_traffic",
+                    "skill_np_news", "skill_pairing", "skill_photolocation", "skill_pickup_line", "skill_picture_search",
+                    "skill_ping", "skill_translate", "skill_weather", "skill_wiki",
+                    "LILACS_core", "LILACS_knowledge", "LILACS_storage", "LILACS_rhymes","LILACS_teach", "LILACS_chatbot", "LILACS_curiosity"]
+        },
+        // minimal LILACS
+        "LILACS_minimal":{
+            "type":"whitelist",
+            "skills":["LILACS_core", "LILACS_knowledge", "LILACS_storage", "LILACS_teach"]
+        },
+        // offline LILACS #not available, TODO: need own spotlight server
+        //"LILACS_offline":{
+        //    "type":"whitelist",
+        //    "skills":[]
+        //},
+        // full LILACS
+        "LILACS":{
+            "type":"whitelist",
+            "skills":["LILACS_core", "LILACS_knowledge", "LILACS_storage", "LILACS_rhymes","LILACS_teach", "LILACS_chatbot", "LILACS_curiosity"]
+        },
+        // jarbas selection
+        "jarbas":{
+            "type":"blacklist",
+            "skills":["skill-ip", "skill_configuration", "skill_pairing", "skill-audio-record", "skill-wolfram-alpha" ]
+        },
+        // all skills
+        "full":{
+            "type":"blacklist",
+            "skills":[]
+        },
+        // censor some skills (facebook client, dont allow desktop launcher)
+        "restricted":{
+            "type":"blacklist",
+            "skills":["skill_desktop_launcher", "skill_mute", "skill_dictation", "service_display", "service_audio", "service_vision", "skill_audio_record", "LILACS_teach", "skill_configuration", "skill_pairing", "skill_diagnostics","skill_deep_dream", "skill_control_center", "skill_cmd", "skill_wallpaper", "skill_reminder", "skill_alarm", "skill_playback_control", "skill_naptime"]
+        },
+        // only skills you are working on, dont load unecessary skills for what you are testing
+        "dev":{
+            "type":"whitelist",
+            "skills":["skill_control_center", "skill_sun_spots"]
+        },
+        // privacy enhanced skills selection,
+        "secure":{
+            "type":"blacklist",
+            "skills":["service_vision", "skill_desktop_launcher", "service_sound_analisys", "skill_ip", "skill_configuration", "skill-audio-record", "skill_pairing"]
+        }
+    }
   },
 
   // Address of the REMOTE server
