--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -102,6 +102,7 @@
     "blacklisted_skills": ["template_skill", "service_context", "service_sound_analisys"],
     // priority skills to be loaded first
     "priority_skills": ["skill_control_center","service_vision", "service_objectives", "service_display", "service_audio", "LILACS_core", "LILACS_knowledge", "LILACS_storage"],
+    "default_run_level" : "dev",
     "run_levels": {
         // core skills only
         "0":{
@@ -160,7 +161,7 @@
         // only skills you are working on, dont load unecessary skills for what you are testing
         "dev":{
             "type":"whitelist",
-            "skills":["skill_control_center", "skill_sun_spots"]
+            "skills":["skill_control_center", "skill_cleverbot"]
         },
         // privacy enhanced skills selection,
         "secure":{
