--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -101,7 +101,7 @@
      // blacklisted skills to not load
     "blacklisted_skills": ["template_skill", "service_context", "service_sound_analisys"],
     // priority skills to be loaded first
-    "priority_skills": ["skill_control_center","service_vision", "service_objectives", "service_display", "service_audio", "LILACS_core", "LILACS_knowledge", "LILACS_storage"],
+    "priority_skills": ["skill_control_center", "service_objectives"],
     "default_run_level" : "dev",
     "run_levels": {
         // core skills only
