--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -101,7 +101,7 @@
      // blacklisted skills to not load
     "blacklisted_skills": ["template_skill", "service_context", "service_sound_analisys"],
     // priority skills to be loaded first
-    "priority_skills": ["skill_control_center", "service_objectives"],
+    "priority_skills": ["skill_control_center", "service_objectives", "skill_help"],
     "default_run_level" : "dev",
     "run_levels": {
         // core skills only
@@ -114,7 +114,7 @@
             "skills":["skill_alarm", "skill_configuration", "skill_date_time", "skill_desktop_launcher", "skill_hello_world",
             "skill_joke", "skill_naptime", "skill_npr_news", "skill_pairing", "skill_personal", "skill_reminder",
             "skill_speak", "skill_spelling", "skill_stock", "skill_stop", "skill_volume", "skill_weather", "skill_wiki",
-            "skill-ip", "skill-pairing", "skill-wolfram-alpha"]
+            "skill-ip", "skill-pairing", "skill-wolfram-alpha", "skill_control_center", "skill_help"]
         },
         // all skills that can run offline only
         "offline":{
@@ -161,7 +161,7 @@
         // only skills you are working on, dont load unecessary skills for what you are testing
         "dev":{
             "type":"whitelist",
-            "skills":["skill_control_center", "skill_cleverbot"]
+            "skills":["skill_control_center", "skill_help", "service_face", "skill_joke"]
         },
         // privacy enhanced skills selection,
         "secure":{
