Create PadatiousService and add padatious to requirements.txt

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -177,6 +177,11 @@
     }
   },
 
+  "padatious": {
+    "intent_cache": "~/.mycroft/intent_cache",
+    "train_delay": 4
+  },
+
   // =================================================================
   // All of the follow are specific to particular skills and will soon
   // be removed from this file.
