--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -15,7 +15,8 @@
   // TODO: save unmodified, lowercase upon demand
   // Override: none
   "lang": "en-us",
-  
+  // db to save stuff in
+  "database_path": "home/test/database",
   // Measurement units, either 'metric' or 'english'
   // Override: REMOTE
   "system_unit": "metric",
