missing lilacs config

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -17,6 +17,57 @@
   "lang": "en-us",
   // db to save stuff in
   "database_path": "home/test/database",
+  // LILACS
+  "knowledge": {
+    "backends": {
+      "wikipedia": {
+        "type": "wikipedia",
+        "active": true
+      },
+      "wikidata": {
+        "type": "wikidata",
+        "active": true
+      },
+      "wikihow": {
+        "type": "wikihow",
+        "active": true
+      },
+      "dbpedia": {
+        "type": "dbpedia",
+        "active": true
+      },
+      "concept net": {
+        "type": "concept net",
+        "active": true
+      },
+      "wordnik": {
+        "type": "wordnik",
+        "active": true
+      },
+      "wolfram alpha": {
+        "type": "wolfram alpha",
+        "active": true
+      },
+      "user": {
+        "type": "user",
+        "active": true
+      }
+    },
+    "default-backend": "wolfram alpha"
+    },
+  "storage": {
+    "backends": {
+      "local": {
+        "type": "json",
+        "active": true
+      },
+      "json": {
+        "type": "json",
+        "active": true
+      }
+    },
+    "default-backend": "local"
+    },
   // Measurement units, either 'metric' or 'english'
   // Override: REMOTE
   "system_unit": "metric",
