--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -15,6 +15,23 @@
   // TODO: save unmodified, lowercase upon demand
   // Override: none
   "lang": "en-us",
+  // API keys
+  "APIS": {
+    "WolframAlphaAPI": "key",
+    "WeatherAPI": "key",
+    "GraphAPI": "key",
+    "ImgurKey": "key",
+    "ImgurSecret": "secret",
+    "NASAAPI": "DEMO_KEY",
+    "GoogleTrafficAPI": "key",
+    "MashapeAPI": "key",
+    "WikimapiaAPI": "key",
+    "CloudsightAPI": "key",
+    "RedditAPI": "key",
+    "CloudsightSecret": "key",
+    "RedditSecret": "key",
+    "Wordnik":"key"
+  },
   // db to save stuff in
   "database_path": "home/test/database",
   // LILACS
