--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -33,7 +33,7 @@
     "Wordnik":"key"
   },
   // db to save stuff in
-  "database_path": "home/test/database",
+  "database_path": "../database",
   // LILACS
   "knowledge": {
     "backends": {
