Update default setting to new standard

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -234,9 +234,13 @@
     "backends": {
       "local": {
         "type": "mpg123",
-        "active": true,
-        "default": true
+        "active": true
+      },
+      "vlc": {
+        "type": "vlc",
+        "active": true
       }
-    }
+    },
+    "default-backend": "local"
   }
 }
